WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14630
Assertion failure (context) in WebView::getIMMContext() on startup
https://bugs.webkit.org/show_bug.cgi?id=14630
Summary
Assertion failure (context) in WebView::getIMMContext() on startup
mitz
Reported
2007-07-16 03:08:55 PDT
Just launching a debug build of TOT I get ASSERTION FAILED: context ..\WebView.cpp(3686) : WebView::getIMMContext Backtrace:
> WebKit_debug.dll!WebView::getIMMContext() Line 3686 + 0x22 bytes C++
WebKit_debug.dll!WebView::resetIME(WebCore::Frame * targetFrame=0x01383ae8) Line 3756 + 0x8 bytes C++ WebKit_debug.dll!WebViewWndProc(HWND__ * hWnd=0x0002049a, unsigned int message=8, unsigned int wParam=197644, long lParam=0) Line 1248 C++ user32.dll!7e418734() [Frames below may be incorrect and/or missing, no symbols loaded for user32.dll] user32.dll!7e418816() user32.dll!7e41c63f() user32.dll!7e41c665() comctl32.dll!773e1b57() comctl32.dll!773e1eaa() comctl32.dll!773e206c() comctl32.dll!7744e0c2() comctl32.dll!773e1eaa() comctl32.dll!773e20cf() user32.dll!7e418734() user32.dll!7e418816() user32.dll!7e41b4c0() user32.dll!7e41b50c() ntdll.dll!7c90eae3() user32.dll!7e41da6c() Safari.exe!004bbe19() Safari.exe!00496398() Safari.exe!00493f46() Safari.exe!004048f8() user32.dll!7e418734() user32.dll!7e41d05b() user32.dll!7e41b4c0() user32.dll!7e41f9fe() ntdll.dll!7c90eae3() user32.dll!7e41fe13() user32.dll!7e41fdd9() ntdll.dll!7c912dc5() ntdll.dll!7c912dc5() ntdll.dll!7c912da8() ntdll.dll!7c910895() ntdll.dll!7c915041() ntdll.dll!7c926abe() ntdll.dll!7c9268ad() ntdll.dll!7c91056d() ntdll.dll!7c9155c9() ntdll.dll!7c915152() ntdll.dll!7c91554a() ntdll.dll!7c9153f5() ntdll.dll!7c91056d() user32.dll!7e419951() ntdll.dll!7c910833() ntdll.dll!7c910833() user32.dll!7e4199e4() user32.dll!7e419a12() user32.dll!7e41a303() user32.dll!7e419a12() user32.dll!7e41a31a() user32.dll!7e41a33b() ntdll.dll!7c926a44() ntdll.dll!7c926abe() rpcrt4.dll!77ef36cf() rpcrt4.dll!77ef36a8() ntdll.dll!7c926abe() ntdll.dll!7c96cde9() ntdll.dll!7c912dc5() ntdll.dll!7c912da8() ntdll.dll!7c912dc5() ntdll.dll!7c912da8() ntdll.dll!7c910895() ntdll.dll!7c910833() user32.dll!7e41fecc() user32.dll!7e422d68() user32.dll!7e41fc58() Safari.exe!004044e4() Safari.exe!0047bdcf() ntdll.dll!7c960000() ntdll.dll!7c960bcc() WebKit_debug.dll!WTF::isForbidden() Line 93 + 0xe bytes C++ msvcr80d.dll!00f9b98e() WebKit_debug.dll!WTF::fastFree(void * p=0x7e418ffb) Line 154 + 0xc bytes C++ user32.dll!7e41bd1f() user32.dll!7e418ffb() user32.dll!7e418ffb() Safari.exe!0047b7dc() CoreFoundation.dll!6fc08d02() Safari.exe!0049cef6() Safari.exe!0047b60f() Safari.exe!00416262() Safari.exe!00465273() Safari.exe!0047bc65() Safari.exe!004c7695() kernel32.dll!7c816fd7()
Attachments
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2007-07-16 03:16:18 PDT
Mitz, looks like you're right, that assertion is bogus
Oliver Hunt
Comment 2
2007-07-16 14:45:47 PDT
Landed
r24326
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug