        Reviewed by Steve.

Fix for http://bugs.webkit.org/show_bug.cgi?id=14630

        Remove bogus assertion

        * WebView.cpp:
        (WebView::getIMMContext):



git-svn-id: svn://svn.chromium.org/blink/trunk@24326 bbb929c8-8fbe-4397-9dbb-9b2b20218538