third_party/WebKit/WebKit/win/WebView.cpp
@@ -3684,7 +3684,6 @@ IMMDict::IMMDict()
 HIMC WebView::getIMMContext() 
 {
     HIMC context = IMMDict::dict().getContext(m_viewWindow);
-    ASSERT(context);
     return context;
 }
 
